# global-agent-hackathon-may-2025

./: .gitignore
submissions/intersectx/backend/: .gitignore  API.md  ChatAPI.md  MCP_API.md  README.md  main.py  mcp_server.py  pyproject.toml
submissions/intersectx/backend/backend/: dependencies.py  settings.py
submissions/intersectx/backend/backend/agents/: base.py  customer_sentiment.py  document_processing.py  finance.py  market_analysis.py  netlify.py  output_parser.py  partnership_network.py  regulatory_compliance.py  risk_analysis.py  team.py  vector_store.py
submissions/intersectx/backend/backend/api/: auth.py  chat.py  companies.py  customer_sentiment.py  files.py  finance.py  market_analysis.py  news.py  partnership_network.py  regulatory_compliance.py  research.py  risk_analysis.py  team.py
submissions/intersectx/backend/backend/data/: sample_card.json
submissions/intersectx/backend/backend/database/: mongo.py
submissions/intersectx/backend/backend/middlewares/: auth.py  cache_cleanup.py
submissions/intersectx/backend/backend/plot/: data_transform.py  factory.py  types.py
submissions/intersectx/backend/backend/services/: auth.py  cache.py  chat.py  companies.py  companies_list_generator.ipynb  customer_sentiment.py  files.py  finance.py  knowledge.py  market_analysis.py  news.py  partnership_network.py  regulatory_compliance.py  research.py  risk_analysis.py  search_service.py  team.py
submissions/intersectx/backend/backend/utils/: api_helpers.py  cache_decorator.py  exceptions.py  knowledge.py  llm.py  logger.py  openai_patch.py  storage.py  (+2 more)
(+87 files in other folders)
